# EU4BattleSimulator

./: .gitignore  EU4BattleSimulator.cabal  Main.hs
BattleSimulator/: Battle.hs  Node.hs  Phase.hs  Player.hs  Unit.hs
