cabal-version:  >= 1.10
-- cabal-version: 2.4.1.0
name: EU4BattleSimulator
build-type: Simple
version: 0

executable EU4BattleSimulator
  main-is: Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wmissing-local-signatures
  build-depends:
      base >=4.7 && <5
    , vector
    , containers
    , lens
    , generic-lens
  default-extensions:
    ScopedTypeVariables
    DeriveGeneric
    DerivingStrategies
    TypeApplications
    DataKinds
  other-modules:
    BattleSimulator.Player
    BattleSimulator.Node
    BattleSimulator.Unit
    BattleSimulator.Battle
    BattleSimulator.Phase
  default-language: Haskell2010
